[gd_scene load_steps=29 format=3 uid="uid://byv2nw33246r1"]

[ext_resource type="Script" path="res://scripts/Character/clown.gd" id="1_nce81"]
[ext_resource type="Texture2D" uid="uid://c0r0khqrxg8kq" path="res://art/Animations/PlayerAnimations.png" id="2_5l6c0"]
[ext_resource type="Texture2D" uid="uid://7fo2pqwkt70r" path="res://art/Animations/PlayerDeathAnimations.png" id="2_b2s2q"]
[ext_resource type="Script" path="res://scripts/Character/Camera2D2.gd" id="3_clmbw"]
[ext_resource type="AudioStream" uid="uid://cgyn5ojahgkn7" path="res://art/Sound/audio fx/walk.mp3" id="5_20w2a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_crhxe"]
atlas = ExtResource("2_b2s2q")
region = Rect2(0, 74, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6btk2"]
atlas = ExtResource("2_b2s2q")
region = Rect2(37, 74, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqann"]
atlas = ExtResource("2_b2s2q")
region = Rect2(74, 74, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbjug"]
atlas = ExtResource("2_b2s2q")
region = Rect2(111, 74, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jca7e"]
atlas = ExtResource("2_5l6c0")
region = Rect2(0, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx414"]
atlas = ExtResource("2_5l6c0")
region = Rect2(37, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_im0jx"]
atlas = ExtResource("2_5l6c0")
region = Rect2(74, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3y5"]
atlas = ExtResource("2_5l6c0")
region = Rect2(111, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjl7o"]
atlas = ExtResource("2_5l6c0")
region = Rect2(148, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6lcn"]
atlas = ExtResource("2_5l6c0")
region = Rect2(185, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1p02"]
atlas = ExtResource("2_5l6c0")
region = Rect2(222, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn4rg"]
atlas = ExtResource("2_5l6c0")
region = Rect2(259, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcecs"]
atlas = ExtResource("2_5l6c0")
region = Rect2(296, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0ddg"]
atlas = ExtResource("2_5l6c0")
region = Rect2(333, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_36p8o"]
atlas = ExtResource("2_5l6c0")
region = Rect2(370, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpfcb"]
atlas = ExtResource("2_5l6c0")
region = Rect2(407, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1mpf"]
atlas = ExtResource("2_5l6c0")
region = Rect2(444, 0, 37, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_lxqqu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_crhxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6btk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqann")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbjug")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jca7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx414")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im0jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjl7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6lcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1p02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn4rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcecs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0ddg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36p8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpfcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1mpf")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_86545"]
size = Vector2(27.9999, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llajv"]
size = Vector2(37, 23)

[sub_resource type="Animation" id="Animation_ml5hb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.34902)]
}

[sub_resource type="Animation" id="Animation_t4k33"]
resource_name = "hit"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.34902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.278431), Color(1, 1, 1, 1), Color(1, 1, 1, 0.329412)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.6, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.160784), Color(1, 1, 1, 1), Color(1, 1, 1, 0.160784), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8yrgj"]
_data = {
"RESET": SubResource("Animation_ml5hb"),
"hit": SubResource("Animation_t4k33")
}

[node name="Clown" type="CharacterBody2D"]
self_modulate = Color(1, 1, 1, 0.34902)
collision_layer = 3
motion_mode = 1
script = ExtResource("1_nce81")

[node name="Weapon" type="Node2D" parent="."]
z_as_relative = false
y_sort_enabled = true
position = Vector2(17, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lxqqu")
animation = &"death"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.500052, 2.99998)
rotation = 1.5708
shape = SubResource("RectangleShape2D_86545")

[node name="AttackCoolDown" type="Timer" parent="."]
one_shot = true

[node name="AbilityCoolDown" type="Timer" parent="."]
one_shot = true

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0.5, 4.5)
shape = SubResource("RectangleShape2D_llajv")

[node name="Camera2D2" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_enabled = true
script = ExtResource("3_clmbw")
shake_intensity = 4.925

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8yrgj")
}
speed_scale = 3.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_20w2a")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
